# RustOpengl

./: .gitignore  Cargo.toml  LICENSE  README.md
debug-ui/: Cargo.toml
debug-ui/src/: lib.rs
graphics/: Cargo.toml
graphics/src/: colors.rs  lib.rs  light.rs  material.rs  math_data.rs  model.rs  texture.rs  uniform.rs  vertex.rs
helper/: Cargo.toml
helper/src/: lib.rs
math/: Cargo.toml
math/src/: lib.rs
resources/: material_info_datas.csv  material_info_samples.md
resources/shaders/: basic_lighting.fs.glsl  basic_lighting.vs.glsl  light_color.fs.glsl  lighting.fs.glsl  lighting.vs.glsl  material_lightcaster.vs.glsl  material_lightcaster_all.fs.glsl  material_lightcaster_point.fs.glsl  material_lightcaster_spot.fs.glsl  material_lighting.fs.glsl  material_maplighting.fs.glsl  model.fs.glsl  model.vs.glsl  sample.fs.glsl  sample.vs.glsl  sample_tex.fs.glsl  sample_tex.vs.glsl
src/: binding.rs  input.rs  lib.rs  main.rs  tick.rs
src/geometry/: cube.rs
ui/: Cargo.toml
ui/src/: lib.rs
