[package]
name = "rust_opengl"
version = "0.1.0"
authors = ["Barogthor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helper = { path = "./helper" }
math = { path = "./math" }
graphics = { path = "./graphics" }
ui = { path = "./ui" }
