[package]
name = "graphics"
version = "0.1.0"
authors = ["Barogthor <f.thery3103@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "../ui" }
math = { path = "../math" }
glium = "0.30.2"
rusttype = "0.9.2"
image = "0.24.6"
russimp = { version = "2.0.5", features = ["prebuilt"] }